updates text color

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,7 +4,7 @@ $color-palette-2: #dad7b4;
 $color-palette-3: #c8a086;
 $color-palette-4: #efb98f;
 $color-palette-5: #d3896d;
-$text-color: #1e1e1e;
+$text-color: #414141;
 
 @mixin cardStyle() {
   position: absolute;
