--- a/src/style.scss
+++ b/src/style.scss
@@ -505,20 +505,23 @@ canvas {
   display: flex;
   justify-content: center;
   transition: 0.4s ease-in-out;
-  p {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
   > div {
-    @include cardStyle();
-    background-color: #ffffff63;
+    background-color: #c3c3c3b3;
+    border: 2px dashed #ffffff;
+    box-shadow: 0 0 0 5px #c3c3c3b3;
+    border-radius: 2em;
     color: rgb(255, 255, 255);
     width: 200px;
     padding: 10px;
     height: 40vh;
     display: flex;
     flex-flow: column;
-    justify-content: space-between;
+  }
+  p {
+    height: 100%;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    justify-self: center;
   }
   #btn {
     width: 100%;
@@ -529,6 +532,7 @@ canvas {
       color: white;
       background-color: rgba(255, 255, 255, 0);
       border: none;
+      font-size: 1.8rem;
     }
   }
 }
