--- a/src/style.scss
+++ b/src/style.scss
@@ -602,14 +602,27 @@ canvas {
       display: flex;
       width: 70px;
       justify-content: space-between;
-      > div:nth-child(1) {
-        animation: opacity-animation 1.3s infinite 0.2s;
+      &:nth-child(1) {
+        > div:nth-child(1) {
+          animation: opacity-animation 1.3s infinite 0.6s;
+        }
+        > div:nth-child(2) {
+          animation: opacity-animation 1.3s infinite 0.4s;
+        }
+        > div:nth-child(3) {
+          animation: opacity-animation 1.3s infinite 0.2s;
+        }
       }
-      > div:nth-child(2) {
-        animation: opacity-animation 1.3s infinite 0.4s;
-      }
-      > div:nth-child(3) {
-        animation: opacity-animation 1.3s infinite 0.6s;
+      &:nth-child(2) {
+        > div:nth-child(1) {
+          animation: opacity-animation 1.3s infinite 0.2s;
+        }
+        > div:nth-child(2) {
+          animation: opacity-animation 1.3s infinite 0.4s;
+        }
+        > div:nth-child(3) {
+          animation: opacity-animation 1.3s infinite 0.6s;
+        }
       }
     }
   }
@@ -645,6 +658,7 @@ canvas {
   width: 0;
   height: 0;
   top: 2vh;
+  left: 0;
   position: absolute;
   border-radius: 5px;
   transition: 0.4s ease;
